# pattrns

./: CHANGELOG.md  Cargo.toml  README.md  justfile
benches/: README.md
bindings/: Cargo.toml  README.md  build.rs  cbindgen.toml
bindings/.cargo/: config.toml
bindings/includes/: pattrns.h
bindings/src/: allocator.rs  lib.rs  relay.cpp
bindings/src/allocator/: dhat.rs  external.rs
examples/playground/: .gitignore  Cargo.toml  build.ps1  build.rs  build.sh  serve.ps1  serve.sh
examples/playground/assets/quickstart/01 Basic Patterns/: 02 Alternating Notes.lua  03 Note Properties.lua
examples/playground/assets/quickstart/02 Rhythm Variations/: 01 Subdivided Pulses.lua  02 Triplet Resolution.lua  03 Euclidean Rhythms.lua
examples/playground/assets/quickstart/03 Notes and Scales/: 01 Basic Note Stacks.lua  02 Chord Notation.lua  03 Working with Scales.lua
examples/playground/assets/quickstart/04 Cycles Mini-Notation/: 01 Basic Cycle.lua  02 Alternating Cycles.lua  03 Euclidean Rhythms.lua
examples/playground/assets/quickstart/05 Dynamic Pulses & Events/: 01 Random Note Selection.lua  02 Probability-Based Emit.lua  03 Stateful Arpeggiator.lua
examples/playground/assets/quickstart/06 Advanced Techniquies/: 01 Conditional Gate.lua  02 Dynamic Cycles.lua  03 Generative Melody.lua
examples/playground/assets/samples/: bass_diode.flac  bass_synth.flac  clap_big.flac  clap_pulse.flac  hihat_closed_appropriate.flac  hihat_closed_hype.flac  tone_chip.flac  tone_guitar.flac  tone_low_c.flac  tone_plastic.flac
examples/playground/src/: app.rs  ffi.rs  main.rs
examples/playground/web/: app.css  app.js  index.html  playground.data  playground.js  playground.wasm
(+47 files in other folders)
