[package]
name = "playground"
version = "0.1.0"
edition = "2021"
description = "pattrns playground for the web"

# see build.rs and build.sh for the emscripten config

[dependencies]
pattrns = { path = "../..", default-features = false, features = [
    "scripting",
    "lua",
    "player",
    "web-output",
] }
emscripten_rs_sys = { version = "^0.1" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }

[patch.crates-io]
# custom patched version with pthread support
lua-src = { git = 'https://github.com/emuell/lua-src-rs', tag = "mlua_v0.11.3" }
